mdt_cli/tests/snapshots/snapshots__multiple_providers_update__readme_md.snap
---
source: mdt_cli/tests/snapshots.rs
expression: readme
---
<!-- {=header} -->

# Project Title

A great project.

<!-- {/header} -->

## Installation

<!-- {=install} -->

```sh
npm install my-lib
```

<!-- {/install} -->

## Usage

<!-- {=usage} -->

```ts
import { greet } from "my-lib";
greet("world");
```

<!-- {/usage} -->
